feat(security): implement chatbot authentication and authorization mechanisms (unfinished)